committing finally finished to somewhat acceptable

--- a/Cozy_Cuisine/Views/Home/Download.cshtml
+++ b/Cozy_Cuisine/Views/Home/Download.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model Cozy_Cuisine.ViewModels.DownloadPageVM
+@{
     ViewData["Title"] = "Downloads";
 }
 
@@ -7,47 +8,98 @@
         <div class="sectitle display-4 mb-3">
             DOWNLOAD
         </div>
+
         <div class="row">
+            <!-- Large patch (latest patch) -->
             <div class="col-lg-7">
-                <div class="newscont shadow rounded-4 overflow-hidden p-0 d-block text-decoration-none h-75" href="#">
+                <div class="newscont shadow rounded-4 overflow-hidden p-0 d-block text-decoration-none h-75">
                     <div class="news-thumbnail position-relative">
-                        <img src="~/img/opening.png" alt="News image" class="newsimg img-fluid w-100" />
+                        <iframe src="@GetDrivePreviewUrl(Model.LatestPatch.URLImageList)" class="newsimg img-fluid w-100"></iframe>
                         <div class="newstxt p-5 text-start">
                             <span>
-                                <button class="playnowbtn btn px-4 py-3 my-3">PLAY NOW</button>
+                                <a class="playnowbtn btn px-4 py-3 my-3" href="@Model.LatestPatch.GameURL">PLAY NOW</a>
                             </span>
-                            <span class="ggtitle fs-6 d-block">Let’s play!</span>
+                            <span class="ggtitle fs-6 d-block">@Model.LatestPatch.PatchName</span>
+                            <span class="ggtitle fs-6 d-block">@Model.LatestPatch.Version</span>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <!-- Smaller patches -->
             <div class="col-lg-4">
-                <a class="newscont shadow rounded-4 overflow-hidden p-0 d-block text-decoration-none mb-2" href="#">
-                    <div class="news-thumbnail position-relative">
-                        <img src="~/img/opening.png" alt="News image" class="newsimg img-fluid w-100" />
-                        @* <div class="newstxt p-3">
-                            <span class="ggtitle fs-6 d-block">Game Levels</span>
-                        </div> *@
-                    </div>
-                </a>
-                <a class="newscont shadow rounded-4 overflow-hidden p-0 d-block text-decoration-none mb-2" href="#">
-                    <div class="news-thumbnail position-relative">
-                        <img src="~/img/opening.png" alt="News image" class="newsimg img-fluid w-100" />
-                        @* <div class="newstxt p-3">
-                            <span class="ggtitle fs-6 d-block">Game Levels</span>
-                        </div> *@
-                    </div>
-                </a>
-                <a class="newscont shadow rounded-4 overflow-hidden p-0 d-block text-decoration-none mb-2" href="#">
-                    <div class="news-thumbnail position-relative">
-                        <img src="~/img/opening.png" alt="News image" class="newsimg img-fluid w-100" />
-                        @* <div class="newstxt p-3">
-                            <span class="ggtitle fs-6 d-block">Game Levels</span>
-                        </div> *@
-                    </div>
-                </a>
+                @foreach (var patch in Model.Patches)
+                {
+                    <a class="newscont shadow rounded-4 overflow-hidden p-0 d-block text-decoration-none mb-2" href="@patch.GameURL">
+                        <div class="news-thumbnail position-relative">
+                            <iframe src="@GetDrivePreviewUrl(patch.URLImageList)" class="newsimg img-fluid w-100"></iframe>
+                            <div class="newstxt p-3">
+                                <span class="ggtitle fs-6 d-block">@patch.PatchName</span>
+                                <span class="ggtitle fs-6 d-block">@patch.Version</span>
+                            </div>
+                        </div>
+                    </a>
+                }
             </div>
+
+            @* <div class="col-lg-7">
+                <div class="newscont shadow rounded-4 overflow-hidden p-0 d-block text-decoration-none h-75">
+                    <div class="news-thumbnail position-relative">
+                       @{ 
+                           var imageUrl = Model.LatestPatch.URLImageList?.Split(',').FirstOrDefault();
+                           var imgFileId = "";
+
+                           
+                            var parts = imageUrl.Split('/');
+                            if (parts.Length >= 6)
+                            {
+                                imgFileId = parts[5];
+                            }
+                        
+
+                        var previewImgUrl = $"https://drive.google.com/file/d/{imgFileId}/preview";
+                        }
+                        <iframe src="@previewImgUrl" alt="News image" class="newsimg img-fluid w-100"></iframe>
+                        <div class="newstxt p-5 text-start">
+                            <span>
+                                <a type="button" class="playnowbtn btn px-4 py-3 my-3" href="@Model.LatestPatch.GameURL">PLAY NOW</a>
+                            </span>
+                            <span class="ggtitle fs-6 d-block">@Model.LatestPatch.PatchName </span>
+                            <span class="ggtitle fs-6 d-block">@Model.LatestPatch.Version </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Smaller patches -->
+            <div class="col-lg-4">
+                @foreach (var patch in Model.Patches)
+                {
+                    var patchimageUrl = patch.URLImageList?.Split(',').FirstOrDefault();
+                    var patchimgFileId = "";
+
+
+                    var patchparts = patchimageUrl.Split('/');
+                        if (patchparts.Length >= 6)
+                        {
+                        patchimgFileId = parts[5];
+                           
+                        }
+
+                    var patchpreviewImgUrl = $"https://drive.google.com/file/d/{patchimgFileId}/preview";
+                    <a class="newscont shadow rounded-4 overflow-hidden p-0 d-block text-decoration-none mb-2" href="@patch.GameURL">
+                        <div class="news-thumbnail position-relative">
+                            <iframe src="@patchpreviewImgUrl" alt="News image" class="newsimg img-fluid w-100" ></iframe>
+                            <div class="newstxt p-3">
+                                <span class="ggtitle fs-6 d-block">@patch.PatchName</span>
+                                <span class="ggtitle fs-6 d-block">@patch.Version</span>
+                            </div>
+                        </div>
+                    </a>
+                }
+            </div> *@
         </div>
+        
     </div>
 </div>
 
@@ -133,3 +185,21 @@
 </div>
 
 
+@section Scripts{
+    @functions {
+    public string GetDrivePreviewUrl(string url)
+    {
+        if (string.IsNullOrEmpty(url)) return string.Empty;
+
+        var firstUrl = url.Split(',').FirstOrDefault();
+        var parts = firstUrl?.Split('/');
+        if (parts != null && parts.Length >= 6)
+        {
+            return $"https://drive.google.com/file/d/{parts[5]}/preview";
+        }
+
+        return string.Empty;
+    }
+}
+
+}
