--- a/Cozy_Cuisine/Views/Home/Gallery.cshtml
+++ b/Cozy_Cuisine/Views/Home/Gallery.cshtml
@@ -84,7 +84,7 @@
             IMAGES
         </div>
 
-        <div class="swiper-container image-swiper position-relative">
+        <div id="imageCarousel" class="swiper-container image-swiper position-relative">
             <div class="swiper-wrapper">
                 @foreach (var gallery in Model.Galleries)
                 {
@@ -109,7 +109,7 @@
                         <div class="swiper-slide text-center mb-4">
                             <a class="vidbtn btn btn-link p-0 shadow" href="@previewImgUrl" target="_blank">
                                 <div class="vid-thumbnail position-relative">
-                                    <iframe src="@previewImgUrl" width="200" height="200" style="border: none;" class="rounded-top-4"></iframe>
+                                    <iframe src="@previewImgUrl" width="200" height="200" style="border: none; overflow:hidden" class="rounded-top-4"></iframe>
                                 </div>
                                 <div class="vidtitle p-3 rounded-bottom-4">
                                     <div class="vidtitletxt">@gallery.Title</div>
@@ -135,64 +135,6 @@
             </div>
         </div>
 
-
-    
-
-        @* <div class="sectitle display-4 mb-3 mt-5">
-            IMAGES
-        </div>
-        <div class="vidimgrow row">
-            <div class="col-lg-2 p-0 text-center mb-4">
-                <a class="vidbtn btn btn-link p-0 shadow" href="https://www.youtube.com/watch?v=ot7uXNQskhs">
-                    <div class="vid-thumbnail position-relative">
-                        <img src="~/img/closing.png" alt="Alternate Text" class="vidpic img-fluid rounded-top-4" />
-                        
-                    </div>
-                    <div class="vidtitle p-3 rounded-bottom-4">
-                        <div class="vidtitletxt">Kiosk Cooking</div>
-                        <div><i class="fa-solid fa-download fa-2xl" style="color: #D0B8A8;"></i></div>
-                    </div>
-                </a>
-
-            </div>
-            <div class="col-lg-2 p-0 text-center mb-4">
-                <a class="vidbtn btn btn-link p-0 shadow" href="https://www.youtube.com/watch?v=ot7uXNQskhs">
-                    <div class="vid-thumbnail position-relative">
-                        <img src="~/img/closing.png" alt="Alternate Text" class="vidpic img-fluid rounded-top-4" />
-                    </div>
-                    <div class="vidtitle p-3 rounded-bottom-4">
-                        <div class="vidtitletxt">Ingredient Gathering</div>
-                        <div><i class="fa-solid fa-download fa-2xl" style="color: #D0B8A8;"></i></div>
-                    </div>
-                </a>
-
-            </div>
-            <div class="col-lg-2 p-0 text-center mb-4">
-                <a class="vidbtn btn btn-link p-0 shadow" href="https://www.youtube.com/watch?v=ot7uXNQskhs">
-                    <div class="vid-thumbnail position-relative">
-                        <img src="~/img/closing.png" alt="Alternate Text" class="vidpic img-fluid rounded-top-4" />
-                        
-                    </div>
-                    <div class="vidtitle p-3 rounded-bottom-4">
-                        <div class="vidtitletxt">Kiosk Upgrades</div>
-                        <div><i class="fa-solid fa-download fa-2xl" style="color: #D0B8A8;"></i></div>
-                    </div>
-                </a>
-
-            </div>
-            <div class="col-lg-2 p-0 text-center mb-4">
-                <a class="vidbtn btn btn-link p-0 shadow" href="https://www.youtube.com/watch?v=ot7uXNQskhs">
-                    <div class="vid-thumbnail position-relative">
-                        <img src="~/img/closing.png" alt="Alternate Text" class="vidpic img-fluid rounded-top-4" />
-                    </div>
-                    <div class="vidtitle p-3 rounded-bottom-4">
-                        <div class="vidtitletxt">Community Events</div>
-                        <div><i class="fa-solid fa-download fa-2xl" style="color: #D0B8A8;"></i></div>
-                    </div>
-                </a>
-
-            </div>
-        </div> *@
     </div>
 </div>
 
