--- a/Cozy_Cuisine/Views/Manage/Dashboard.cshtml
+++ b/Cozy_Cuisine/Views/Manage/Dashboard.cshtml
@@ -37,208 +37,6 @@
     Recent Activities
 </div>
 
-@* <div class="container mt-4">
-    <ul class="recentnavtabs nav nav-tabs" id="myTab" role="tablist">
-        <li class="nav-item" role="presentation">
-            <button class="recenttabs nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab">Updates</button>
-        </li>
-        <li class="nav-item" role="presentation">
-            <button class="recenttabs nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab">Comments</button>
-        </li>
-        <li class="nav-item" role="presentation">
-            <button class="recenttabs nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button" role="tab">Bug Reports</button>
-        </li>
-        <li class="nav-item" role="presentation">
-            <button class="recenttabs nav-link" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4" type="button" role="tab">User Logs</button>
-        </li>
-    </ul>
-    <div class="tab-content mt-3" id="myTabContent">
-        <!--updates-->
-        <div class="tab-pane fade show active" id="tab1" role="tabpanel">
-            <table class="table table-bordered table-hover table-striped">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Image</th>
-                        <th>Title</th>
-                        <th>Description</th>
-                        <th>Date Created</th>
-                        <th>Status</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>101</td>
-                        <td><img src="~/img/logo.png"/></td>
-                        <td>New Recipes Added! 🍳</td>
-                        <td>Introducing 10 new recipes, including sushi & burgers!</td>
-                        <td>2025-03-13</td>
-                        <td>Released</td>
-                        <td>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-eye fa-sm"></i> View</button>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-pen-to-square fa-sm"></i> Edit</button>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-trash fa-sm"></i> Delete</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>ID</td>
-                        <td>Image</td>
-                        <td>Title</td>
-                        <td>Description</td>
-                        <td>Date Created</td>
-                        <td>Status</td>
-                        <td>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-eye fa-sm"></i> View</button>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-pen-to-square fa-sm"></i> Edit</button>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-trash fa-sm"></i> Delete</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>101</td>
-                        <td><img src="~/img/logo.png" /></td>
-                        <td>New Recipes Added! 🍳</td>
-                        <td>Introducing 10 new recipes, including sushi & burgers!</td>
-                        <td>2025-03-13</td>
-                        <td>Released</td>
-                        <td>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-eye fa-sm"></i> View</button>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-pen-to-square fa-sm"></i> Edit</button>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-trash fa-sm"></i> Delete</button>
-                        </td>
-
-                    </tr>
-                    <tr>
-                        <td>101</td>
-                        <td><img src="~/img/logo.png" /></td>
-                        <td>New Recipes Added! 🍳</td>
-                        <td>Introducing 10 new recipes, including sushi & burgers!</td>
-                        <td>2025-03-13</td>
-                        <td>Released</td>
-                        <td>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-eye fa-sm"></i> View</button>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-pen-to-square fa-sm"></i> Edit</button>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-trash fa-sm"></i> Delete</button>
-                        </td>
-
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <!--comments-->
-        <div class="tab-pane fade" id="tab2" role="tabpanel">
-            <table class="table table-bordered table-hover table-striped">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Messages</th>
-                        <th>Images</th>
-                        <th>Posted Date</th>
-                        <th>Updated Date</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>ID</td>
-                        <td>Messages</td>
-                        <td>Images</td>
-                        <td>Posted Date</td>
-                        <td>Updated Date</td>
-                        <td>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-eye fa-sm"></i> View</button>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-pen-to-square fa-sm"></i> Edit</button>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-trash fa-sm"></i> Delete</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>ID</td>
-                        <td>Messages</td>
-                        <td>Images</td>
-                        <td>Posted Date</td>
-                        <td>Updated Date</td>
-                        <td>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-eye fa-sm"></i> View</button>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-pen-to-square fa-sm"></i> Edit</button>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-trash fa-sm"></i> Delete</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <!--bug reports-->
-        <div class="tab-pane fade" id="tab3" role="tabpanel">
-            <table class="table table-bordered table-hover table-striped">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Title</th>
-                        <th>Description</th>
-                        <th>Message</th>
-                        <th>Status</th>
-                        <th>Report Date</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>ID</td>
-                        <td>Title</td>
-                        <td>Description</td>
-                        <td>Message</td>
-                        <td>Status</td>
-                        <td>Report Date</td>
-                        <td>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-eye fa-sm"></i> View</button>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-pen-to-square fa-sm"></i> Edit</button>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-trash fa-sm"></i> Delete</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>ID</td>
-                        <td>Title</td>
-                        <td>Description</td>
-                        <td>Message</td>
-                        <td>Status</td>
-                        <td>Report Date</td>
-                        <td>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-eye fa-sm"></i> View</button>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-pen-to-square fa-sm"></i> Edit</button>
-                            <button class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-trash fa-sm"></i> Delete</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <!--user logs-->
-        <div class="tab-pane fade" id="tab4" role="tabpanel">
-            <table class="table table-bordered table-hover table-striped">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Username</th>
-                        <th>Logged In</th>
-                        <th>Logged Out</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>ID</td>
-                        <td>Username</td>
-                        <td>Logged In</td>
-                        <td>Logged Out</td>
-                    </tr>
-                    <tr>
-                        <td>ID</td>
-                        <td>Username</td>
-                        <td>Logged In</td>
-                        <td>Logged Out</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div> *@
 <div class="container mt-4">
     <ul class="recentnavtabs nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
@@ -286,13 +84,28 @@
                                 <td>
                                     @if (!string.IsNullOrEmpty(patch.URLImageList))
                                     {
-
                                         var imageUrls = patch.URLImageList.Split(',');
                                         foreach (var url in imageUrls)
                                         {
-                                            <a href="@url" target="_blank">
-                                                <img src="@url" alt="@url" style="width: 100px; height: auto; margin-right: 5px;" />
-                                            </a>
+                                            var imgfileId = "";
+                                            var imgparts = url.Split('/');
+                                            if (imgparts.Length >= 6)
+                                            {
+                                                imgfileId = imgparts[5];
+                                            }
+
+                                            var imgpreviewUrl = $"https://drive.google.com/file/d/{imgfileId}/preview";
+
+                                            if (!string.IsNullOrEmpty(imgfileId))
+                                            {
+                                                <iframe src="@imgpreviewUrl" width="300" height="auto" style="border: none; margin-right: 5px;"></iframe>
+                                            }
+                                            else
+                                            {
+                                                <a href="@url" target="_blank">
+                                                    <img src="@url" alt="Image" style="width: 100px; height: auto; margin-right: 5px;" />
+                                                </a>
+                                            }
                                         }
                                     }
                                     else
@@ -300,9 +113,57 @@
                                         <span>No Image Uploaded</span>
                                     }
                                 </td>
+
+                                <!-- GIF / Video -->
                                 <td>
-                                    <a href="@patch.URLGif">@patch.URLGif</a>
+                                    @{
+                                        var videoUrl = patch.URLGif;
+                                        var embedUrl = "";
+                                        var fileId = "";
+
+                                        if (!string.IsNullOrEmpty(videoUrl))
+                                        {
+                                            if (videoUrl.Contains("youtube.com/watch?v="))
+                                            {
+                                                var parts = videoUrl.Split("watch?v=");
+                                                var videoId = parts.Length > 1 ? parts[1] : "";
+                                                embedUrl = $"https://www.youtube.com/embed/{videoId}";
+                                            }
+                                            else if (videoUrl.Contains("youtu.be/"))
+                                            {
+                                                var parts = videoUrl.Split("youtu.be/");
+                                                var videoId = parts.Length > 1 ? parts[1] : "";
+                                                embedUrl = $"https://www.youtube.com/embed/{videoId}";
+                                            }
+                                            else if (videoUrl.Contains("drive.google.com/file/d/"))
+                                            {
+                                                var parts = videoUrl.Split('/');
+                                                if (parts.Length >= 6)
+                                                {
+                                                    fileId = parts[5];
+                                                    embedUrl = $"https://drive.google.com/file/d/{fileId}/preview";
+                                                }
+                                            }
+                                        }
+                                    }
+
+                                    @if (!string.IsNullOrEmpty(embedUrl))
+                                    {
+                                        <iframe width="300" height="170" src="@embedUrl" frameborder="0"
+                                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                                allowfullscreen>
+                                        </iframe>
+                                    }
+                                    else if (!string.IsNullOrEmpty(videoUrl))
+                                    {
+                                        <a href="@videoUrl" target="_blank">@videoUrl</a>
+                                    }
+                                    else
+                                    {
+                                        <span>No Video Uploaded</span>
+                                    }
                                 </td>
+
                                 <td>
                                     <a href="@patch.GameURL" target="_blank">@patch.Version</a>
                                 </td>
