--- a/Cozy_Cuisine/Views/Wiki/GameItemsManagement.cshtml
+++ b/Cozy_Cuisine/Views/Wiki/GameItemsManagement.cshtml
@@ -173,7 +173,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
-                <form id="editItemForm" method="post" asp-action="EditMedia">
+                <form id="editItemForm" method="post" asp-action="EditGameItem">
                     <input type="hidden" id="itemid" name="ItemId">
 
                     <div class="mb-3">
